fix: remove webkit-scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,3 +135,7 @@
     }
   }
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
